--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="rent_a_car" default="default" basedir=".">
-    <description>Builds, tests, and runs the project rent_a_car.</description>
+<project name="Rent_A_Car" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Rent_A_Car.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="rent_a_car-impl.jar">
+        <target name="run" depends="Rent_A_Car-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
