--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/rent_a_car.jar
+dist.jar=${dist.dir}/Rent_A_Car.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/rent_a_car
+dist.jlink.output=${dist.jlink.dir}/Rent_A_Car
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=rent_a_car
-main.class=rent_a_car.Rent_a_car
+jlink.launcher.name=Rent_A_Car
+main.class=rent_a_car.Rent_A_Car
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
